feat: Update navigation links to use absolute paths for improved routing consistency

--- a/pages/cadastro/cadastro.html
+++ b/pages/cadastro/cadastro.html
@@ -65,7 +65,7 @@
 
                 <div id="cadastro">
                     <span>Já faz parte do ReLaunch?</span>
-                    <a href="../login/login.html">Entre agora!</a>
+                    <a href="/login">Entre agora!</a>
                 </div>
             </form>
         </div>
