--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -32,11 +32,11 @@
                 </div>
                 <div id="submit">
                     <button type="submit">Entrar</button>
-                    <a href="../recnoti/recnoti.html"> Esqueci minha senha</a>
+                    <a href="/recuperar-notificacao"> Esqueci minha senha</a>
                 </div>
                 <div id="cadastro">
                     <span>Novo no ReLaunch?</span>
-                    <a href="../cadastro/cadastro.html">Cadastre-se agora!</a>
+                    <a href="/cadastro">Cadastre-se agora!</a>
                 </div>
                 <div id="loginResponse"></div>
             </form>
