--- a/pages/perfil/edit-perfil.html
+++ b/pages/perfil/edit-perfil.html
@@ -25,7 +25,7 @@
         </div>
         <div class="icones">
             <a href="#" class="icone" id="lampada"></a>
-            <a href="../notification/notification.html" class="icone" id="sino"></a>
+            <a href="/notificacoes" class="icone" id="sino"></a>
             <button id="authButton" class="auth-btn"></button>
             <a href="#" class="icone" id="menu" onclick="toggleMenu()"></a>
         </div>
@@ -131,7 +131,7 @@
                     <div class="tags-preview" id="tagsPreview"></div>
                 </div>
                 <div class="form-actions">
-                    <button type="button" onclick="window.location.href='perfil.html'" class="btn-cancel">Cancelar</button>
+                    <button type="button" onclick="window.location.href='/perfil'" class="btn-cancel">Cancelar</button>
                     <button type="submit" class="btn-save">Salvar Alterações</button>
                 </div>
             </form>
