--- a/pages/perfil/perfil.html
+++ b/pages/perfil/perfil.html
@@ -49,7 +49,7 @@
                         <span class="tag">Adicione suas competências</span>
                     </div>
                     <div class="edit-profile" id="edit-profile-section">
-                        <a href="edit-perfil.html" class="edit-btn">Editar Perfil</a>
+                        <a href="/editar-perfil" class="edit-btn">Editar Perfil</a>
                     </div>
                 </div>
             </div>
