--- a/pages/project-chat/project-chat.html
+++ b/pages/project-chat/project-chat.html
@@ -41,22 +41,22 @@
 
     <main>
         <nav>
-            <a class="item" href="../project/project.html" >
+            <a class="item" href="/projeto" >
                 Projeto
             </a>
-            <a  class="item" href="project-chats.html">
+            <a  class="item" href="/chats">
                 Bate-Papo
             </a>
-            <a  class="item" href="../project-payment/project-payment-0.html">
+            <a  class="item" href="/project-payment">
                 Pagamento
             </a>
-            <a  class="item" href="project-file.html">
+            <a  class="item" href="/project-file">
                 Arquivos
             </a>
         </nav>
         <section class="secao-chat">
             <div class="chat-header">
-                <button class="back-btn" onclick="window.location.href='project-chats.html'">
+                <button class="back-btn" onclick="window.location.href='/chats'">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20">
                         <path fill="#46B1D5" d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"/>
                     </svg>
