--- a/pages/project-chat/project-chats.html
+++ b/pages/project-chat/project-chats.html
@@ -32,7 +32,7 @@
     <div></div>
     <div class="icones">
       <a href="" class="icone" id="lampada"></a>
-      <a href="../notification/notification.html" class="icone" id="sino"></a>
+      <a href="/notificacoes" class="icone" id="sino"></a>
       <a href="#" class="icone" id="menu" onclick="toggleMenu()"></a>
     </div>
     
@@ -42,10 +42,10 @@
 
   <main>
     <nav>
-      <a href="../projects-gallery/projects-gallery.html" class="item">Projetos</a>
-      <a href="project-chats.html" class="item active">Bate-Papo</a>
-      <a href="../project-payment/project-payment-0.html" class="item">Pagamento</a>
-      <a href="project-file.html" class="item">Arquivos</a>
+      <a href="/projetos" class="item">Projetos</a>
+      <a href="/chats" class="item active">Bate-Papo</a>
+      <a href="/project-payment" class="item">Pagamento</a>
+      <a href="/project-file" class="item">Arquivos</a>
     </nav>
     <div class="container">
       <h1>Seus Chats</h1>
