--- a/pages/projects-gallery/projects-gallery.html
+++ b/pages/projects-gallery/projects-gallery.html
@@ -31,8 +31,8 @@
         </div>
         <div class="icones">
             
-                <a href="projects-page.html" class="icone" id="lampada"></a>
-                <a href="../notification/notification.html" class="icone" id="sino"></a>
+                <a href="#" class="icone" id="lampada"></a>
+                <a href="/notificacoes" class="icone" id="sino"></a>
                 <a class="icone" id="menu" onclick="toggleMenu()"></a>
         </div>
         <div id="hamburger-menu" class="hamburger-menu"></div>
