--- a/pages/recnoti/recnoti.html
+++ b/pages/recnoti/recnoti.html
@@ -33,7 +33,7 @@
                 </div>
                 <div id="cadastro">
                     <span>Usuário não encontrado?</span>
-                    <a href="../cadastro/cadastro.html">Cadastre-se agora!</a>
+                    <a href="/cadastro">Cadastre-se agora!</a>
                 </div>
             </form>
             <div id="recnotiResponseDiv"></div>
