--- a/pages/available-projects/available-projects.html
+++ b/pages/available-projects/available-projects.html
@@ -28,8 +28,8 @@
             </svg>
         </div>
         <div class="icones">
-            <a href="../projects-gallery/projects-gallery.html" class="icone" id="lampada"></a>
-            <a href="../notification/notification.html" class="icone" id="sino"></a>
+            <a href="/projetos" class="icone" id="lampada"></a>
+            <a href="/notificacoes" class="icone" id="sino"></a>
             <button id="authButton" class="auth-btn"></button>
             <a href="#" class="icone" id="menu" onclick="toggleMenu()"></a>
         </div>
