--- a/pages/project-payment/project-payment-1.html
+++ b/pages/project-payment/project-payment-1.html
@@ -29,7 +29,7 @@
         </div>
         <div class="icones">
                 <a href="" class="icone" id="lampada"></a>
-                <a href="../notification/notification.html" class="icone" id="sino"></a>
+                <a href="/notificacoes" class="icone" id="sino"></a>
                 <a href="#" class="icone" id="menu" onclick="toggleMenu()"></a>
         </div>
         
@@ -39,16 +39,16 @@
 
     <main>
         <nav>
-            <a class="item" href="../projects-gallery/projects-gallery.html" >
+            <a class="item" href="/projetos" >
                 Projeto
             </a>
-            <a  class="item" href="../project-chat/project-chats.html">
+            <a  class="item" href="/chats">
                 Bate-Papo
             </a>
-            <a  class="item" href="../project-payment/project-payment-0.html">
+            <a  class="item" href="/project-payment">
                 Pagamento
             </a>
-            <a  class="item" href="project-file.html">
+            <a  class="item" href="/project-file">
                 Arquivos
             </a>
         </nav>
