--- a/pages/project/project.html
+++ b/pages/project/project.html
@@ -30,7 +30,7 @@
         </div>
         <div class="icones">
             <a href="" class="icone" id="lampada"></a>
-            <a href="../notification/notification.html" class="icone" id="sino"></a>
+            <a href="/notificacoes" class="icone" id="sino"></a>
             <button id="authButton" class="auth-btn"></button>
             <a href="#" class="icone" id="menu" onclick="toggleMenu()"></a>
         </div>        <div id="hamburger-menu" class="hamburger-menu">
@@ -39,16 +39,16 @@
 
     <main>
         <nav>
-            <a class="item" href="../projects-gallery/projects-gallery.html" >
+            <a class="item" href="/projetos" >
                 Projetos
             </a>
-            <a  class="item" href="../project-chat/project-chats.html">
+            <a  class="item" href="/chats">
                 Bate-Papo
             </a>
-            <a  class="item" href="../project-payment/project-payment-0.html">
+            <a  class="item" href="/project-payment">
                 Pagamento
             </a>
-            <a  class="item" href="project-file.html">
+            <a  class="item" href="/project-file">
                 Arquivos
             </a>
         </nav>
