feat: Implement universal routing system for improved navigation

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
         </div>
     </footer>
 </body>
+<script src="src/scripts/router.js"></script>
 <script src="src/config/env.js"></script>
 <script src="src/scripts/presence-manager.js"></script>
 <script src="src/scripts/websocket-notifications.js"></script>
