--- a/pages/available-projects/available-projects.html
+++ b/pages/available-projects/available-projects.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿﻿<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
@@ -119,7 +119,8 @@
         </div>
     </footer>
 
-    <script src="/src/config/env.js"></script>
+    <script src="/src/scripts/router.js"></script>
+<script src="/src/config/env.js"></script>
     <script src="/src/scripts/presence-manager.js"></script>
     <script src="/src/scripts/websocket-notifications.js"></script>
     <script src="/src/scripts/notifications.js"></script>
