--- a/pages/recnoti/recnoti.html
+++ b/pages/recnoti/recnoti.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -40,6 +40,7 @@
         </div>
     </main>
 </body>
-    <script src="/src/scripts/notifications.js"></script>
+    <script src="/src/scripts/router.js"></script>
+<script src="/src/scripts/notifications.js"></script>
     <script src="/pages/recnoti/script-recnoti.js"></script>
 </html>
