--- a/pages/cadastro/cadastro.html
+++ b/pages/cadastro/cadastro.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -71,7 +71,8 @@
         </div>
     </main>
 </body>
-    <script src="/src/config/env.js"></script>
+    <script src="/src/scripts/router.js"></script>
+<script src="/src/config/env.js"></script>
     <script src="/src/scripts/notifications.js"></script>
     <script src="/pages/cadastro/script-cadastro.js"></script>
 </html>
