--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -43,7 +43,8 @@
         </div>
     </main>
 </body>
-    <script src="/src/config/env.js"></script>
+    <script src="/src/scripts/router.js"></script>
+<script src="/src/config/env.js"></script>
     <script src="/src/scripts/presence-manager.js"></script>
     <script src="/src/scripts/notifications.js"></script>
     <script src="/pages/login/script-login.js"></script>
