--- a/pages/project-chat/project-chat.html
+++ b/pages/project-chat/project-chat.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -122,7 +122,8 @@
         </div>
     </footer>
 </body>
-    <script src="/src/config/env.js"></script>
+    <script src="/src/scripts/router.js"></script>
+<script src="/src/config/env.js"></script>
     <script src="/src/scripts/presence-manager.js"></script>
     <script src="/src/scripts/websocket-chat.js"></script>
     <script src="/src/scripts/websocket-notifications.js"></script>
