--- a/pages/project-chat/project-chats.html
+++ b/pages/project-chat/project-chats.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿﻿<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
@@ -99,7 +99,8 @@
     </div>
   </footer>
 
-  <script src="/src/config/env.js"></script>
+  <script src="/src/scripts/router.js"></script>
+<script src="/src/config/env.js"></script>
   <script src="/src/scripts/presence-manager.js"></script>
   <script src="/src/scripts/websocket-notifications.js"></script>
   <script src="/src/scripts/notifications.js"></script>
