--- a/pages/project-payment/project-payment-0.html
+++ b/pages/project-payment/project-payment-0.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -118,7 +118,8 @@
         </div>
     </footer>
 </body>
-    <script src="/src/config/env.js"></script>
+    <script src="/src/scripts/router.js"></script>
+<script src="/src/config/env.js"></script>
     <script src="/src/scripts/presence-manager.js"></script>
     <script src="/src/scripts/websocket-notifications.js"></script>
     <script src="/src/scripts/notifications.js"></script>
