--- a/pages/recuppassword/recuppassword.html
+++ b/pages/recuppassword/recuppassword.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -46,6 +46,7 @@
         </div>
     </main>
 </body>
-    <script src="/src/scripts/notifications.js"></script>
+    <script src="/src/scripts/router.js"></script>
+<script src="/src/scripts/notifications.js"></script>
     <script src="/pages/recuppassword/script-recuppassword.js"></script>
 </html>
