feat: add script to update favicon links in HTML files
- Created a new Python script `update-favicon.py` that searches for all HTML files in the `pages` directory and updates the favicon link from a PNG to an ICO format.
- The script handles UTF-8 encoding and preserves it while reading and writing files.
- It provides feedback on whether each file was updated or skipped, along with error handling for any issues encountered during the process.

--- a/pages/notification/notification.html
+++ b/pages/notification/notification.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notificações</title>
-    <link rel="icon" type="image/png" href="/src/images/ReLaunch-Logo.png">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+
+    <script src="/src/scripts/router.js"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -151,8 +153,7 @@
         </div>
     </footer>
 
-    <script src="/src/scripts/router.js"></script>
-<script src="/src/config/env.js"></script>
+    <script src="/src/config/env.js"></script>
     <script src="/src/scripts/presence-manager.js"></script>
     <script src="/src/scripts/websocket-notifications.js"></script>
     <script src="/src/scripts/notifications.js"></script>
