--- a/pages/perfil/perfil.html
+++ b/pages/perfil/perfil.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil - ReLaunch</title>
-    <link rel="icon" type="image/png" href="/src/images/ReLaunch-Logo.png">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="/pages/perfil/perfil.css">
     <link rel="stylesheet" href="/src/components/notifications.css">
     <link rel="stylesheet" href="/src/components/hamburger-menu.css">
