feat: Implement user profile display in header across multiple pages

--- a/pages/projects-gallery/projects-gallery.html
+++ b/pages/projects-gallery/projects-gallery.html
@@ -161,6 +161,7 @@
     <script src="/src/scripts/presence-manager.js"></script>
     <script src="/src/scripts/websocket-notifications.js"></script>
     <script src="/src/scripts/notifications.js"></script>
+    <script src="/src/scripts/header-user-profile.js"></script>
     <script src="/src/scripts/hamburger-menu.js"></script>
     <script src="/pages/projects-gallery/script-projects-gallery.js"></script>
 </html>
