--- a/pages/recnoti/recnoti.html
+++ b/pages/recnoti/recnoti.html
@@ -39,6 +39,7 @@
             <div id="recnotiResponseDiv"></div>
         </div>
     </main>
+    <script src="/src/scripts/header-user-profile.js"></script>
 </body>
     <script src="/src/scripts/router.js"></script>
 <script src="/src/scripts/notifications.js"></script>
