--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
         <div class="icones">
                 <a href="" class="icone" id="lampada"></a>
                 <a href="/notificacoes" class="icone" id="sino"></a>
-                <button id="authButton" class="auth-btn"></button>
-                <a href="#" class="icone" id="menu" onclick="toggleMenu()"></a>
+            <div class="user-profile" id="userProfile" style="display: none;">
+                <img src="" alt="User" class="user-avatar" id="userAvatar">
+                <span class="user-name" id="userName"></span>
+            </div><a href="#" class="icone" id="menu" onclick="toggleMenu()"></a>
         </div>
         
         <div id="hamburger-menu" class="hamburger-menu">
@@ -130,6 +132,7 @@
             </select>
         </div>
     </footer>
+    <script src="/src/scripts/header-user-profile.js"></script>
 </body>
 <script src="src/scripts/router.js"></script>
 <script src="src/config/env.js"></script>
