--- a/pages/available-projects/available-projects.html
+++ b/pages/available-projects/available-projects.html
@@ -30,8 +30,10 @@
         <div class="icones">
             <a href="/projetos" class="icone" id="lampada"></a>
             <a href="/notificacoes" class="icone" id="sino"></a>
-            <button id="authButton" class="auth-btn"></button>
-            <a href="#" class="icone" id="menu" onclick="toggleMenu()"></a>
+            <div class="user-profile" id="userProfile" style="display: none;">
+                <img src="" alt="User" class="user-avatar" id="userAvatar">
+                <span class="user-name" id="userName"></span>
+            </div><a href="#" class="icone" id="menu" onclick="toggleMenu()"></a>
         </div>
         <div id="hamburger-menu" class="hamburger-menu"></div>
     </header>
@@ -124,6 +126,7 @@
     <script src="/src/scripts/presence-manager.js"></script>
     <script src="/src/scripts/websocket-notifications.js"></script>
     <script src="/src/scripts/notifications.js"></script>
+    <script src="/src/scripts/header-user-profile.js"></script>
     <script src="/src/scripts/hamburger-menu.js"></script>
     <script src="/pages/available-projects/script-available-projects.js"></script>
 </body>
