--- a/pages/perfil/perfil.html
+++ b/pages/perfil/perfil.html
@@ -25,8 +25,10 @@
         <div class="icones">
             <a href="#" class="icone" id="lampada"></a>
             <a href="/notificacoes" class="icone" id="sino"></a>
-            <button id="authButton" class="auth-btn"></button>
-            <a href="#" class="icone" id="menu" onclick="toggleMenu()"></a>
+            <div class="user-profile" id="userProfile" style="display: none;">
+                <img src="" alt="User" class="user-avatar" id="userAvatar">
+                <span class="user-name" id="userName"></span>
+            </div><a href="#" class="icone" id="menu" onclick="toggleMenu()"></a>
         </div>
         
         <div id="hamburger-menu" class="hamburger-menu">
@@ -42,8 +44,8 @@
                     </svg>
                 </div>
                 <div class="info">
-                    <h2 id="userName">Carregando...</h2>
-                    <p class="email" id="userEmail">carregando@email.com</p>
+                    <h2 id="userNameFromContainer">Carregando...</h2>
+                    <p class="email" id="userEmailFromContainer">carregando@email.com</p>
                     <p id="userBiografia">Adicione uma biografia</p>
                     <div class="tags" id="userTags">
                         <span class="tag">Adicione suas competências</span>
@@ -102,6 +104,7 @@
 <script src="/src/scripts/presence-manager.js"></script>
 <script src="/src/scripts/websocket-notifications.js"></script>
 <script src="/src/scripts/notifications.js"></script>
+<script src="/src/scripts/header-user-profile.js"></script>
 <script src="/src/scripts/hamburger-menu.js"></script>
 <script src="/pages/perfil/perfil.js"></script>
 </html>
