--- a/pages/project-chat/project-chat.html
+++ b/pages/project-chat/project-chat.html
@@ -32,7 +32,10 @@
         <div class="icones">
                 <a href="" class="icone" id="lampada"></a>
                 <a href="/notificacoes" class="icone" id="sino"></a>
-                <a href="#" class="icone" id="menu" onclick="toggleMenu()"></a>
+            <div class="user-profile" id="userProfile" style="display: none;">
+                <img src="" alt="User" class="user-avatar" id="userAvatar">
+                <span class="user-name" id="userName"></span>
+            </div><a href="#" class="icone" id="menu" onclick="toggleMenu()"></a>
         </div>
         
         <div id="hamburger-menu" class="hamburger-menu">
@@ -129,5 +132,6 @@
     <script src="/src/scripts/websocket-notifications.js"></script>
     <script src="/src/scripts/notifications.js"></script>
     <script src="/pages/project-chat/script-project-chat.js"></script>
+    <script src="/src/scripts/header-user-profile.js"></script>
     <script src="/src/scripts/hamburger-menu.js"></script>
 </html>
