--- a/pages/project-file/project-file-1.html
+++ b/pages/project-file/project-file-1.html
@@ -30,7 +30,10 @@
         <div class="icones">
                 <a href="" class="icone" id="lampada"></a>
                 <a href="/notificacoes" class="icone" id="sino"></a>
-                <a href="#" class="icone" id="menu" onclick="toggleMenu()"></a>
+            <div class="user-profile" id="userProfile" style="display: none;">
+                <img src="" alt="User" class="user-avatar" id="userAvatar">
+                <span class="user-name" id="userName"></span>
+            </div><a href="#" class="icone" id="menu" onclick="toggleMenu()"></a>
         </div>
         
         <div id="hamburger-menu" class="hamburger-menu">
@@ -115,6 +118,7 @@
     <script src="/src/scripts/presence-manager.js"></script>
     <script src="/src/scripts/websocket-notifications.js"></script>
     <script src="/src/scripts/notifications.js"></script>
+    <script src="/src/scripts/header-user-profile.js"></script>
     <script src="/src/scripts/hamburger-menu.js"></script>
     <script src="/pages/project-file/script-project.js"></script>
     <script src="/pages/project-file/script-project-payment.js"></script>
