Refactor header layout and improve user profile display

--- a/pages/notification/notification.html
+++ b/pages/notification/notification.html
@@ -21,7 +21,7 @@
     <header>
         <div>
             <a href="/home">
-                <img src="/src/images/ReLaunch-Logo-Nomo-Colorido-Invertido.png" alt="" id="logo">
+                <img src="/src/images/ReLaunch-Logo-Nomo-Colorido-Invertido.png" alt="Logo ReLaunch" id="logo">
             </a>
         </div>
         <div id="pesquisa">
@@ -31,13 +31,14 @@
             </svg>
         </div>
         <div class="icones">
-            <a href="" class="icone" id="lampada"></a>
+            <a href="#" class="icone" id="lampada"></a>
             <a href="/notificacoes" class="icone" id="sino"></a>
             <div class="user-profile" id="userProfile" style="display: none;">
                 <img src="" alt="User" class="user-avatar" id="userAvatar">
                 <span class="user-name" id="userName"></span>
             </div><a href="#" class="icone" id="menu" onclick="toggleMenu()"></a>
         </div>
+        
         <div id="hamburger-menu" class="hamburger-menu"></div>
     </header>
 
