--- a/pages/perfil/perfil.html
+++ b/pages/perfil/perfil.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/src/components/hamburger-menu.css">
 </head>
 <body>
-     <header>
+    <header>
         <div>
             <a href="/home">
                 <img src="/src/images/ReLaunch-Logo-Nomo-Colorido-Invertido.png" alt="Logo ReLaunch" id="logo">
@@ -31,8 +31,7 @@
             </div><a href="#" class="icone" id="menu" onclick="toggleMenu()"></a>
         </div>
         
-        <div id="hamburger-menu" class="hamburger-menu">
-        </div>
+        <div id="hamburger-menu" class="hamburger-menu"></div>
     </header>
 
     <main>
