--- a/pages/project-payment/project-payment-0.html
+++ b/pages/project-payment/project-payment-0.html
@@ -18,7 +18,7 @@
     <header>
         <div>
             <a href="/home">
-                <img src="/src/images/ReLaunch-Logo-Nomo-Colorido-Invertido.png" alt="" id="logo">
+                <img src="/src/images/ReLaunch-Logo-Nomo-Colorido-Invertido.png" alt="Logo ReLaunch" id="logo">
             </a>
         </div>
         <div id="pesquisa">
@@ -28,16 +28,15 @@
             </svg>
         </div>
         <div class="icones">
-                <a href="" class="icone" id="lampada"></a>
-                <a href="/notificacoes" class="icone" id="sino"></a>
+            <a href="#" class="icone" id="lampada"></a>
+            <a href="/notificacoes" class="icone" id="sino"></a>
             <div class="user-profile" id="userProfile" style="display: none;">
                 <img src="" alt="User" class="user-avatar" id="userAvatar">
                 <span class="user-name" id="userName"></span>
             </div><a href="#" class="icone" id="menu" onclick="toggleMenu()"></a>
         </div>
         
-        <div id="hamburger-menu" class="hamburger-menu">
-        </div>
+        <div id="hamburger-menu" class="hamburger-menu"></div>
     </header>
 
     <main>
@@ -122,12 +121,11 @@
     </footer>
 </body>
     <script src="/src/scripts/router.js"></script>
-<script src="/src/config/env.js"></script>
+    <script src="/src/config/env.js"></script>
     <script src="/src/scripts/presence-manager.js"></script>
     <script src="/src/scripts/websocket-notifications.js"></script>
     <script src="/src/scripts/notifications.js"></script>
     <script src="/src/scripts/header-user-profile.js"></script>
     <script src="/src/scripts/hamburger-menu.js"></script>
-    <script src="/pages/project-payment/script-project.js"></script>
     <script src="/pages/project-payment/script-project-payment.js"></script>
 </html>
