feat: implement reusable avatar system with styles and utility functions

--- a/pages/project-chat/project-chat.html
+++ b/pages/project-chat/project-chat.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="/src/components/notifications.css">
     <link rel="stylesheet" href="/src/components/hamburger-menu.css">
     
+    <link rel="stylesheet" href="/src/styles/avatar-styles.css">
 </head>
 <body>
     <header>
@@ -32,7 +33,7 @@
             <a href="#" class="icone" id="lampada"></a>
             <a href="/notificacoes" class="icone" id="sino"></a>
             <div class="user-profile" id="userProfile" style="display: none;">
-                <img src="" alt="User" class="user-avatar" id="userAvatar">
+                <div class="user-avatar" id="userAvatar"></div>
                 <span class="user-name" id="userName"></span>
             </div><a href="#" class="icone" id="menu" onclick="toggleMenu()"></a>
         </div>
@@ -130,6 +131,7 @@
     <script src="/src/scripts/websocket-notifications.js"></script>
     <script src="/src/scripts/notifications.js"></script>
     <script src="/pages/project-chat/script-project-chat.js"></script>
+    <script src="/src/scripts/avatar-utils.js"></script>
     <script src="/src/scripts/header-user-profile.js"></script>
     <script src="/src/scripts/hamburger-menu.js"></script>
 </html>
