--- a/pages/project-chat/project-chats.html
+++ b/pages/project-chat/project-chats.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="/src/components/hamburger-menu.css">
   <link rel="stylesheet" href="/pages/project-chat/project-chat.css">
   <link rel="stylesheet" href="/pages/project-chat/project-chats.css">
+    <link rel="stylesheet" href="/src/styles/avatar-styles.css">
 </head>
 <body>
   <header>
@@ -31,7 +32,7 @@
             <a href="#" class="icone" id="lampada"></a>
             <a href="/notificacoes" class="icone" id="sino"></a>
             <div class="user-profile" id="userProfile" style="display: none;">
-                <img src="" alt="User" class="user-avatar" id="userAvatar">
+                <div class="user-avatar" id="userAvatar"></div>
                 <span class="user-name" id="userName"></span>
             </div><a href="#" class="icone" id="menu" onclick="toggleMenu()"></a>
         </div>
@@ -103,7 +104,8 @@
   <script src="/src/scripts/presence-manager.js"></script>
   <script src="/src/scripts/websocket-notifications.js"></script>
   <script src="/src/scripts/notifications.js"></script>
-  <script src="/src/scripts/header-user-profile.js"></script>
+  <script src="/src/scripts/avatar-utils.js"></script>
+    <script src="/src/scripts/header-user-profile.js"></script>
     <script src="/src/scripts/hamburger-menu.js"></script>
   <script src="/pages/project-chat/project-chats.js"></script>
 </body>
