--- a/pages/recnoti/recnoti.html
+++ b/pages/recnoti/recnoti.html
@@ -12,6 +12,7 @@
 
     <link rel="stylesheet" href="/pages/recnoti/recnoti.css">
     <link rel="stylesheet" href="/src/components/notifications.css">
+    <link rel="stylesheet" href="/src/styles/avatar-styles.css">
 </head>
 <body>
     <main>
@@ -39,6 +40,7 @@
             <div id="recnotiResponseDiv"></div>
         </div>
     </main>
+    <script src="/src/scripts/avatar-utils.js"></script>
     <script src="/src/scripts/header-user-profile.js"></script>
 </body>
     <script src="/src/scripts/router.js"></script>
