feat: add base styles to perfil pages and adjust user profile padding

--- a/pages/perfil/edit-perfil.html
+++ b/pages/perfil/edit-perfil.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Editar Perfil - ReLaunch</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    
+    <link rel="stylesheet" href="../../src/styles/base-styles.css">
+
     <link rel="stylesheet" href="/pages/perfil/perfil.css">
     <link rel="stylesheet" href="/pages/perfil/edit-perfil.css">
     <link rel="stylesheet" href="/src/components/notifications.css">
