feat: add fetch interceptor for handling expired tokens and improve WebSocket error handling

--- a/pages/project-chat/project-chat.html
+++ b/pages/project-chat/project-chat.html
@@ -128,6 +128,7 @@
 </body>
     <script src="/src/scripts/router.js"></script>
 <script src="/src/config/env.js"></script>
+    <script src="/src/scripts/fetch-interceptor.js"></script>
     <script src="/src/scripts/presence-manager.js"></script>
     <script src="/src/scripts/websocket-chat.js"></script>
     <script src="/src/scripts/websocket-notifications.js"></script>
