--- a/pages/recnoti/recnoti.html
+++ b/pages/recnoti/recnoti.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/pages/recnoti/recnoti.css">
     <link rel="stylesheet" href="/src/components/notifications.css">
     <link rel="stylesheet" href="/src/styles/avatar-styles.css">
+    <script src="/src/scripts/fetch-interceptor.js"></script>
 </head>
 <body>
     <main>
