--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="src/components/notifications.css">
     <link rel="stylesheet" href="src/components/hamburger-menu.css">
     <link rel="stylesheet" href="/src/styles/avatar-styles.css">
+    <script src="/src/scripts/fetch-interceptor.js"></script>
 </head>
 <body>
     <header>
