--- a/pages/notification/notification.html
+++ b/pages/notification/notification.html
@@ -161,6 +161,7 @@
     </footer>
 
     <script src="/src/config/env.js"></script>
+    <script src="/src/scripts/fetch-interceptor.js"></script>
     <script src="/src/scripts/presence-manager.js"></script>
     <script src="/src/scripts/websocket-notifications.js"></script>
     <script src="/src/scripts/notifications.js"></script>
