--- a/pages/project-file/project-file-1.html
+++ b/pages/project-file/project-file-1.html
@@ -117,6 +117,7 @@
 </body>
     <script src="/src/scripts/router.js"></script>
 <script src="/src/config/env.js"></script>
+    <script src="/src/scripts/fetch-interceptor.js"></script>
     <script src="/src/scripts/presence-manager.js"></script>
     <script src="/src/scripts/websocket-notifications.js"></script>
     <script src="/src/scripts/notifications.js"></script>
