feat: add comment functionality with like and reply support, including UI updates for interactions

--- a/pages/perfil/perfil.html
+++ b/pages/perfil/perfil.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../../src/styles/base-styles.css">
 
     <link rel="stylesheet" href="/pages/perfil/perfil.css">
+    <link rel="stylesheet" href="/pages/posts/posts.css">
     <link rel="stylesheet" href="/src/components/notifications.css">
     <link rel="stylesheet" href="/src/components/hamburger-menu.css">
     <link rel="stylesheet" href="/src/styles/avatar-styles.css">
