feat: update posts section title based on user profile context

--- a/pages/perfil/perfil.html
+++ b/pages/perfil/perfil.html
@@ -63,7 +63,7 @@
 
         <section class="user-posts-section">
             <div class="posts-header">
-                <h2>Meus Posts</h2>
+                <h2>Posts</h2>
                 <p class="posts-count">Carregando...</p>
             </div>
             
