--- a/pages/project/project.html
+++ b/pages/project/project.html
@@ -50,7 +50,16 @@
                 Arquivos
             </a>
         </nav>
-        <section>
+        
+        <!-- Loader inicial -->
+        <div id="project-loader" style="display: flex; justify-content: center; align-items: center; width: 85%; min-height: 73vh;">
+            <div style="text-align: center;">
+                <div style="width: 50px; height: 50px; border: 4px solid #e0e0e0; border-top: 4px solid #17a2b8; border-radius: 50%; animation: spin 0.8s linear infinite; margin: 0 auto 15px;"></div>
+                <p style="color: #666; font-family: 'Poppins', sans-serif; font-size: 14px;">Carregando projeto...</p>
+            </div>
+        </div>
+        
+        <section style="display: none;">
             <!-- Status Badge - Canto superior direito -->
             <div id="status-container">
                 <span id="status-badge" class="status-badge"></span>
