--- a/pages/perfil/edit-perfil.html
+++ b/pages/perfil/edit-perfil.html
@@ -38,6 +38,37 @@
             <form id="editProfileForm">
                 <div class="form-section">
                     <h2>Informações Pessoais</h2>
+                    
+                    <!-- Foto de Perfil -->
+                    <div class="form-group profile-image-section">
+                        <label for="profileImage">Foto de Perfil</label>
+                        <div class="profile-image-container">
+                            <div class="profile-image-preview" id="profileImagePreview">
+                                <img id="currentProfileImage" src="" alt="Foto de perfil" style="display: none;">
+                                <div class="profile-image-placeholder">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="48" height="48">
+                                        <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/>
+                                    </svg>
+                                </div>
+                            </div>
+                            <div class="profile-image-actions">
+                                <input type="file" id="profileImage" accept="image/*" style="display: none;">
+                                <button type="button" class="btn-upload-image" onclick="document.getElementById('profileImage').click()">
+                                    <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+                                        <path d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM14 13v4h-4v-4H7l5-5 5 5h-3z"/>
+                                    </svg>
+                                    Escolher Foto
+                                </button>
+                                <button type="button" class="btn-remove-image" id="removeImageBtn" onclick="removeProfileImage()" style="display: none;">
+                                    <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+                                        <path d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"/>
+                                    </svg>
+                                    Remover
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    
                     <div class="form-row">
                         <div class="form-group">
                             <label for="name">Nome</label>
