--- a/pages/perfil/perfil.html
+++ b/pages/perfil/perfil.html
@@ -36,9 +36,7 @@
         <section class="perfil-container">
             <div class="perfil-esquerda">
                 <div class="avatar">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#46B1D5" width="80" height="80">
-                        <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/>
-                    </svg>
+                    <!-- Avatar será carregado dinamicamente -->
                 </div>
                 <div class="info">
                     <h2 id="userNameFromContainer">Carregando...</h2>
