--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
         </div>
         <div>
             <div>
+            <a href="/terms">Termos de Uso</a>
             <a href="">Ajuda</a>
             <a href="">Acessibilidade</a>
             </div>
