feat: add "Termos de Uso" link to multiple pages for improved navigation

--- a/pages/available-projects/available-projects.html
+++ b/pages/available-projects/available-projects.html
@@ -88,8 +88,9 @@
         </div>
         <div>
             <div>
-                <a href="">Ajuda</a>
-                <a href="">Acessibilidade</a>
+            <a href="/terms">Termos de Uso</a>
+            <a href="">Ajuda</a>
+            <a href="">Acessibilidade</a>
             </div>
         </div>
         <div>
