--- a/pages/perfil/edit-perfil.html
+++ b/pages/perfil/edit-perfil.html
@@ -194,6 +194,7 @@
         </div>
         <div>
             <div>
+            <a href="/terms">Termos de Uso</a>
             <a href="">Ajuda</a>
             <a href="">Acessibilidade</a>
             </div>
