--- a/pages/perfil/perfil.html
+++ b/pages/perfil/perfil.html
@@ -153,8 +153,9 @@
         
         <div>
             <div>
-            <a href="">Ajuda</a>
-            <a href="">Acessibilidade</a>
+                <a href="/terms">Termos de Uso</a>
+                <a href="">Ajuda</a>
+                <a href="">Acessibilidade</a>
             </div>
         </div>
         <div>
