--- a/pages/project/project.html
+++ b/pages/project/project.html
@@ -136,6 +136,7 @@
         
         <div>
             <div>
+            <a href="/terms">Termos de Uso</a>
             <a href="">Ajuda</a>
             <a href="">Acessibilidade</a>
             </div>
