--- a/pages/projects-gallery/projects-gallery.html
+++ b/pages/projects-gallery/projects-gallery.html
@@ -128,6 +128,7 @@
         
         <div>
             <div>
+            <a href="/terms">Termos de Uso</a>
             <a href="">Ajuda</a>
             <a href="">Acessibilidade</a>
             </div>
