feat: add "Termos de Uso" link to project chat and payment pages for improved navigation

--- a/pages/project-payment/project-payment-0.html
+++ b/pages/project-payment/project-payment-0.html
@@ -95,6 +95,7 @@
         
         <div>
             <div>
+            <a href="/terms">Termos de Uso</a>
             <a href="">Ajuda</a>
             <a href="">Acessibilidade</a>
             </div>
