--- a/pages/project-chat/project-chat.html
+++ b/pages/project-chat/project-chat.html
@@ -98,6 +98,7 @@
         
         <div>
             <div>
+            <a href="/terms">Termos de Uso</a>
             <a href="">Ajuda</a>
             <a href="">Acessibilidade</a>
             </div>
