--- a/pages/project-chat/project-chats.html
+++ b/pages/project-chat/project-chats.html
@@ -83,6 +83,7 @@
     </div>
     <div>
       <div>
+        <a href="/terms">Termos de Uso</a>
         <a href="">Ajuda</a>
         <a href="">Acessibilidade</a>
       </div>
