--- a/pages/project-file/project-file-0.html
+++ b/pages/project-file/project-file-0.html
@@ -90,6 +90,7 @@
         
         <div>
             <div>
+            <a href="/terms">Termos de Uso</a>
             <a href="">Ajuda</a>
             <a href="">Acessibilidade</a>
             </div>
